simple-echo-api-config/simple-echo-api-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-echo-api
spec:
  selector:
    matchLabels:
      app: simple-echo-api
  template:
    metadata:
      labels:
        app: simple-echo-api
    spec:
      containers:
      - name: simple-echo-api
        image: curity/simple-echo-api:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-echo-api-service
spec:
  type: ClusterIP
  selector:
    app: simple-echo-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http-port
