simple-echo-api-config/echo-api-ingress-kong.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/plugins: phantom-token
    name: echo-api-ingress
    namespace: api
  spec:
    ingressClassName: kong
    rules:
    - host: api.example.gke
      http:
        paths:
        - backend:
            service:
              name: simple-echo-api-service
              port:
                name: http-port
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - api.example.gke
      secretName: example-gke-tls
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
